# agents-framework

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  getting-started.md  index.md  troubleshooting.md
docs/api/: agents.md  mcp.md  memory.md  teams.md  tools.md
docs/guides/: mcp-integration.md  memory.md  patterns.md
docs/research/autogen/: architecture.md  patterns.md
docs/research/autogen-vi/: architecture.md  components.md
docs/research/crewai/: README.md  components.md  examples.md  patterns.md
docs/research/crewai-vi/: README.md  architecture.md  components.md  patterns.md
docs/research/langchain/: README.md  architecture.md  components.md  examples.md
docs/research/langchain-vi/: README.md  architecture.md  patterns.md
docs/research/openclaw/: components.md  examples.md
docs/research/openclaw-vi/: README.md
docs/research/others/: comparison.md  semantic-kernel.md  swarm.md
docs/research/others-vi/: README.md  comparison.md  semantic-kernel.md
docs/research/patterns/: memory-patterns.md  multi-agent-patterns.md
docs/research/patterns-vi/: CLAUDE.md
examples/: 01_simple_agent.py  02_research_team.py  03_mcp_integration.py  04_spawn_subagent.py  05_parallel_agents.py  CLAUDE.md
research/: README-vi.md
research/autogen/: README.md  components.md  examples.md
research/autogen-vi/: README.md  examples.md  patterns.md
research/crewai/: architecture.md
research/crewai-vi/: examples.md
research/langchain/: patterns.md
research/langchain-vi/: components.md  examples.md
research/openclaw/: README.md  architecture.md
research/openclaw-vi/: architecture.md  components.md  examples.md
research/others/: README.md  haystack.md  llamaindex.md
research/others-vi/: haystack.md  llamaindex.md  swarm.md
research/patterns/: README.md  agent-patterns.md  observability.md  tool-patterns.md
research/patterns-vi/: README.md  agent-patterns.md  memory-patterns.md  multi-agent-patterns.md  observability.md  tool-patterns.md
src/agents_framework/: __init__.py
src/agents_framework/a2a/: __init__.py  a2a_security.py  base.py  discovery.py  lifecycle.py  messaging.py  policies.py  queue.py  router.py  spawner.py
src/agents_framework/agents/: __init__.py  base.py  router.py  spawner.py  supervisor.py  worker.py
src/agents_framework/context/: __init__.py  compactor.py  manager.py  summarizer.py
src/agents_framework/execution/: __init__.py  hooks.py  loop.py
src/agents_framework/llm/: CLAUDE.md  __init__.py  base.py
src/agents_framework/mcp/: CLAUDE.md  __init__.py  client.py  tools.py  transport.py
src/agents_framework/memory/: __init__.py  base.py  manager.py  short_term.py
src/agents_framework/observability/: __init__.py  logging.py  metrics.py  tracing.py
src/agents_framework/routing/: __init__.py  base.py  config.py  discovery.py  dynamic.py  engine.py  hooks.py
src/agents_framework/sessions/: __init__.py  base.py  manager.py  resolver.py  store.py  transcript.py
src/agents_framework/skills/: __init__.py  base.py  registry.py
src/agents_framework/teams/: __init__.py  registry.py  router.py  team.py
src/agents_framework/tools/: __init__.py  base.py  executor.py  registry.py  schema.py  spawn_agent.py
tests/: conftest.py
tests/e2e/: conftest.py  test_e2e.py
tests/integration/: conftest.py  test_integration.py
tests/unit/: test_1_llm_core.py  test_2_tools.py  test_3_memory.py  test_4_agent_execution.py  test_5_teams.py
tests/unit/test_agents/: conftest.py  test_base.py  test_router.py  test_spawner.py  test_supervisor.py  test_worker.py
tests/unit/test_context/: __init__.py  conftest.py  test_compactor.py  test_manager.py  test_summarizer.py
tests/unit/test_execution/: __init__.py  conftest.py  test_hooks.py  test_loop.py
tests/unit/test_llm/: conftest.py  test_base.py
(+71 files in other folders)
